--- a/src/app/suppliers/suppliers-table/suppliers-table.component.html
+++ b/src/app/suppliers/suppliers-table/suppliers-table.component.html
@@ -24,6 +24,20 @@
       <td mat-cell *matCellDef="let supplier"> {{supplier.companyPhone}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="created">
+      <th mat-header-cell *matHeaderCellDef> Created</th>
+      <td mat-cell *matCellDef="let supplier">
+        {{ supplier.created?.toDate() | date:'medium':'+0200':'de-DE'}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastModified">
+      <th mat-header-cell *matHeaderCellDef> Modified</th>
+      <td mat-cell *matCellDef="let supplier"> {{supplier.lastModified?.toDate() |
+        date:'medium':'+0200':'de-DE'}}
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="tableControls">
       <th mat-header-cell *matHeaderCellDef> Controls</th>
       <td mat-cell *matCellDef="let supplier">
