implemented sort and pagination

--- a/src/app/suppliers/suppliers-table/suppliers-table.component.html
+++ b/src/app/suppliers/suppliers-table/suppliers-table.component.html
@@ -1,33 +1,36 @@
 <div class="spinner-box" fxLayoutAlign="center center" *ngIf="isLoading$">
   <mat-spinner></mat-spinner>
 </div>
-<div *ngIf="!isLoading$">
-  <table mat-table [dataSource]="suppliers$" class="mat-elevation-z8">
+<div>
+  <!-- TODO handle the if in other component, otherwise no sort or pagination works for whatever reason... *ngIf="!isLoading$" -->
+  <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Company Name</th>
-      <td mat-cell *matCellDef="let supplier"> {{supplier.companyName}} </td>
+    <ng-container matColumnDef="companyName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header=""
+          sortActionDescription="Sort by name"> Company Name
+      </th>
+      <td mat-cell *matCellDef="let supplier"> {{supplier["companyName"]}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="email">
+    <ng-container matColumnDef="companyEmail">
       <th mat-header-cell *matHeaderCellDef> Company Email</th>
-      <td mat-cell *matCellDef="let supplier"> {{supplier.companyEmail}} </td>
+      <td mat-cell *matCellDef="let supplier"> {{supplier["companyEmail"]}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="web">
+    <ng-container matColumnDef="companyWeb">
       <th mat-header-cell *matHeaderCellDef> Web</th>
-      <td mat-cell *matCellDef="let supplier"> {{supplier.companyWeb}} </td>
+      <td mat-cell *matCellDef="let supplier"> {{supplier["companyWeb"]}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="phone">
+    <ng-container matColumnDef="companyPhone">
       <th mat-header-cell *matHeaderCellDef> Phone</th>
-      <td mat-cell *matCellDef="let supplier"> {{supplier.companyPhone}} </td>
+      <td mat-cell *matCellDef="let supplier"> {{supplier["companyPhone"]}} </td>
     </ng-container>
 
     <ng-container matColumnDef="created">
       <th mat-header-cell *matHeaderCellDef> Created</th>
       <td mat-cell *matCellDef="let supplier">
-        {{ supplier.created?.toDate() | date:'medium':'+0200':'de-DE'}}
+        {{ supplier["created"]?.toDate() | date:'medium':'+0200':'de-DE'}}
       </td>
     </ng-container>
 
@@ -43,7 +46,6 @@
       <td mat-cell *matCellDef="let supplier">
         <div>
           <button mat-icon-button
-                  color="basic"
                   matTooltip="Edit supplier"
                   (click)="openEditDialog(supplier)"
                   aria-label="Edit supplier button">
@@ -68,5 +70,10 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 20, 50, 100]"
+                 showFirstLastButtons
+                 aria-label="Select page of suppliers">
+  </mat-paginator>
 
 </div>
